# Viewer_Demo

./: .gitignore  README.md
rest_api_rust/: Cargo.toml
rest_api_rust/src/: lib.rs  main.rs
rest_api_rust/src/database/: db_models.rs  db_process.rs
rest_api_rust/src/image/: book_process.rs
rest_api_rust/src/routes/: core.rs  routes.rs
viewer_app/: README.md  pubspec.yaml
viewer_app/android/app/: build.gradle
viewer_app/android/app/src/main/: AndroidManifest.xml
viewer_app/android/app/src/main/kotlin/com/example/viewer_app/: MainActivity.kt
viewer_app/android/app/src/profile/: AndroidManifest.xml
viewer_app/ios/Runner/: Info.plist
viewer_app/ios/Runner.xcodeproj/: project.pbxproj
viewer_app/lib/: main.dart  utils.dart
viewer_app/lib/View/: page_book_view.dart  page_home.dart  page_search.dart
viewer_app/lib/bloc/Viewer/: viewer_bloc.dart  viewer_event.dart  viewer_state.dart
viewer_app/lib/model/: book.dart  config.dart  database.dart  favorite_db.dart  search.dart
viewer_app/lib/widgets/: custom_slider.dart  my_drawer.dart  thumbnail_widget.dart  viewer_widget.dart
viewer_app/linux/: CMakeLists.txt  my_application.cc
viewer_app/macos/Runner.xcodeproj/: project.pbxproj
viewer_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
viewer_app/macos/Runner/Configs/: AppInfo.xcconfig
viewer_app/test/: sqlite_test.dart
viewer_app/web/: index.html  manifest.json
viewer_app/windows/: CMakeLists.txt
viewer_app/windows/runner/: Runner.rc  main.cpp
