[package]
name = "rest_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
rusqlite = { version = "0.29.0", features = ["bundled", "backup"] }
strum = { version = "0.25", features = ["derive"] }
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
warp = "0.3.5"
once_cell = "1.18.0"
flate2 = "1.0"